# token-meter

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  pyproject.toml  token-meter.linux.onef.spec  token-meter.oned.spec  token-meter.onef.spec
src/: aggregator.rs  domain.rs  main.rs  storage.rs
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/permissions/: app-commands.toml
src-tauri/src/: main.rs
src/providers/: anthropic.rs  mod.rs  openai.rs
src/token_meter/: aggregator.py  config.py  domain.py  keystore.py  logging_config.py  main.py  storage.py
src/token_meter/providers/: openai.py
src/token_meter/ui/: baseline_dialog.py  cost_popup.py  key_dialog.py  tray.py
web/: baseline.html  index.html  overlay.html
web/ui/: contextMenu.js
