[package]
name = "token_meter_egui"
version = "0.1.0"
edition = "2021"
include = ["src/**/*.rs", "assets/**/*"]

[dependencies]
# GUI
eframe = { version = "0.26", features = ["default_fonts", "glow"] }
egui_extras = { version = "0.26", features = ["image"] }
image = "0.24"
# Async runtime and HTTP
tokio = { version = "1.37", features = ["rt-multi-thread", "macros", "time"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
# JSON / serde
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Decimal for monetary accuracy
rust_decimal = { version = "1.30", features = ["serde"] }
# Config dirs
directories = "5.0"
# Convenience error handling
anyhow = "1.0"
# Logging (optional)
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
chrono = "0.4"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = "debuginfo"
