[package]
name = "token-meter-tauri"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
rust_decimal = "1.30"
anyhow = "1.0"
directories = "5.0"
chrono = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
